[gd_scene load_steps=2 format=3 uid="uid://d2m3sppgnie64"]

[ext_resource type="Script" path="res://chat.gd" id="1_sb480"]

[node name="chat" type="Node2D"]
script = ExtResource("1_sb480")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
offset_right = 401.0
offset_bottom = 873.0
vertical_scroll_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ScrollContainer"]
custom_minimum_size = Vector2(393, 1500)
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Back" type="ColorRect" parent="CanvasLayer/ScrollContainer/ColorRect"]
layout_mode = 0
offset_right = 393.0
offset_bottom = 873.0
mouse_filter = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="other_user_name" type="Label" parent="CanvasLayer/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 56.0
offset_top = 10.0
offset_right = 353.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 25
text = "username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="CanvasLayer/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 20.0
offset_right = 61.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 40
text = "⇦"

[node name="send_button" type="Button" parent="CanvasLayer/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 141.0
offset_top = 733.0
offset_right = 254.0
offset_bottom = 833.0
theme_override_font_sizes/font_size = 25
text = "送信"

[node name="text_field" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 17.0
offset_top = 158.0
offset_right = 336.0
offset_bottom = 584.0
bbcode_enabled = true

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 607.0
offset_right = 353.0
offset_bottom = 670.0
placeholder_text = "入力"
wrap_mode = 1

[connection signal="pressed" from="CanvasLayer/ScrollContainer/ColorRect/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/ScrollContainer/ColorRect/send_button" to="." method="_on_send_button_pressed"]
[connection signal="gutter_clicked" from="CanvasLayer/ScrollContainer/ColorRect/TextEdit" to="." method="_on_text_edit_gutter_clicked"]
